--- a/portfolio/src/main/webapp/resources/css/tilesSet.css
+++ b/portfolio/src/main/webapp/resources/css/tilesSet.css
@@ -45,18 +45,21 @@ a:hover{
 	height: 50px;
 	width: 100%;
 	padding: 10px;
-	background-color: rgb(241, 146, 146);
+	background-color: rgb(249, 170, 170);
 	box-sizing: border-box;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
 }
 .user-set-topMenuBox > *{
 	height: 30px;
 	width: 100px;
 	font-size: 15px;
 	margin:0 10px;
-	background-color: rgb(249, 170, 170);
+	background-color: rgb(255, 190, 190);
 	text-align: center;
 	float: left;
 	line-height: 30px;
+	box-sizing: border-box;
 }
 .user-set-logInButton, .user-set-signUpButton{
 	float: right;
@@ -75,6 +78,8 @@ a:hover{
 	padding: 20px 60px;
 	background-color: rgb(249, 170, 170);
 	box-sizing: border-box;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
 }
 .user-set-bottomMenuBox > *{
 	height: 60px;
