--- a/portfolio/src/main/webapp/resources/css/goodsOrder.css
+++ b/portfolio/src/main/webapp/resources/css/goodsOrder.css
@@ -26,7 +26,7 @@
 }
 .user-order-goodsCheck, .user-order-goodsCheckAll{
 	cursor: pointer;
-	margin-left: 17px;
+	margin: 0 15px;
 }
 .user-order-goodsImgTitle{
 	width: 10%;
